trybuild_tests/08-missing-separator.stderr
error: proc-macro derive panicked
 --> $DIR/08-missing-separator.rs:4:16
  |
4 | #[derive(From, FromStr)]
  |                ^^^^^^^
  |
  = help: message: Missing `item_separator` attribute.
